<resources>
    <string name="sbcb_title">水表数据</string>
    <string name="dbcb_title">电表数据</string>
    <string name="qbcb_title">气表数据</string>
    <string name="rbcb_title">热表数据</string>
    <string-array name="sbCheckItemType">
        <item>抄读水表当前用水信息</item>
        <item>抄读水表当前价格信息</item>
        <item>抄读水表实时状态</item>
    </string-array>
    <string-array name="dbCheckItemType">
        <item>抄读电表当前用电信息</item>
        <item>抄读电表当前价格信息</item>
        <item>抄读电表实时状态</item>
    </string-array>
    <string-array name="qbCheckItemType">
        <item>抄读气表当前用气信息</item>
        <item>抄读气表当前价格信息</item>
        <item>抄读气表实时状态</item>
    </string-array>
    <string-array name="rbCheckItemType">
        <item>抄读热表当前用气信息</item>
        <item>抄读热表当前价格信息</item>
        <item>抄读热表实时状态</item>
    </string-array>
    <string-array name="recordType">
        <item>抄表记录</item>
        <item>操作记录</item>
    </string-array>
    <string-array name="usertype">
        <item>普通会员</item>
        <item>公司商户</item>
    </string-array>
    <string-array name="steelStyle">
        <item>型材</item>
        <item>板材</item>
        <item>建材</item>
        <item>管材</item>
        <item>特钢</item>
        <item>金属材料</item>
        <item>钢索具产</item>
    </string-array>
    <string-array name="gcPinming_01">
        <item>工字钢</item>
        <item>槽钢</item>
        <item>角钢</item>
        <item>方钢</item>
        <item>重轨</item>
        <item>高工钢</item>
        <item>H型钢</item>
        <item>不等边角钢</item>
        <item>扁钢</item>
        <item>轻轨</item>
        <item>齿轮钢</item>
        <item>六角钢</item>
        <item>耐热钢棒</item>
        <item>合结圆钢</item>
        <item>合工圆钢</item>
        <item>方管碳工钢</item>
        <item>轴承钢</item>
        <item>碳结圆钢</item>
        <item>不锈圆钢</item>
        <item>轴承圆钢</item>
        <item>矩型管</item>
        <item>弹簧钢</item>
    </string-array>
    <string-array name="gcPinming_02">
        <item>中厚板</item>
        <item>容器板</item>
        <item>中板</item>
        <item>碳结板</item>
        <item>锅炉板</item>
        <item>低合金板</item>
        <item>花纹板</item>
        <item>冷板</item>
        <item>热板</item>
        <item>冷卷板</item>
        <item>热卷板</item>
        <item>镀锌板</item>
        <item>电镀锌板</item>
        <item>电镀锌卷</item>
        <item>锰板</item>
        <item>不锈钢板</item>
        <item>硅钢片</item>
        <item>彩涂板</item>
        <item>彩钢瓦楞铁</item>
        <item>镀锌卷板</item>
        <item>热轧带钢</item>
    </string-array>
    <string-array name="gcPinming_03">
        <item>高线</item>
        <item>普线</item>
        <item>螺纹钢</item>
        <item>圆钢</item>
    </string-array>
    <string-array name="gcPinming_04">
        <item>方管</item>
        <item>矩管</item>
        <item>方矩管</item>
        <item>无缝管</item>
        <item>焊管</item>
        <item>热镀锌管</item>
        <item>冷镀锌管</item>
        <item>螺旋管</item>
        <item>不锈钢管</item>
        <item>热轧无缝管</item>
    </string-array>
    <string-array name="gcPinming_05">
        <item>合结钢</item>
        <item>碳结钢</item>
        <item>模具钢</item>
        <item>硬线</item>
        <item>拉丝材</item>
        <item>轴承钢</item>
    </string-array>
    <string-array name="gcPinming_06">
        <item>生铁</item>
        <item>马口铁</item>
        <item>铝</item>
        <item>铅</item>
        <item>黄铜</item>
        <item>锡</item>
        <item>锌</item>
    </string-array>
    <string-array name="gcPinming_07">
        <item>钢丝绳</item>
    </string-array>
    <string-array name="gcPinming">
        <item>螺纹钢</item>
        <item>线材</item>
        <item>盘螺</item>
        <item>圆钢</item>
        <item>无缝管</item>
        <item>焊管</item>
        <item>热轧板/卷</item>
        <item>冷轧板/卷</item>
        <item>中厚板</item>
        <item>镀锌板</item>
        <item>彩涂板</item>
        <item>镀锡板</item>
        <item>镀铝锌钢板</item>
        <item>硅钢</item>
        <item>带钢</item>
        <item>工角槽</item>
        <item>H型钢</item>
        <item>方钢</item>
        <item>扁钢</item>
        <item>球扁钢</item>
    </string-array>
    <string-array name="gcGuige">
        <item>材质：HPB235</item>
        <item>材质：HRB335</item>
        <item>材质：HRB400</item>
        <item>材质：Q235</item>
        <item>材质：ST12</item>
        <item>材质：DC01</item>
        <item>材质：Q235B</item>
        <item>φ6.5mm</item>
        <item>φ8-10mm</item>
        <item>φ12mm</item>
        <item>φ6.5-12mm</item>
        <item>φ12-14mm</item>
        <item>φ16mm</item>
        <item>φ18mm</item>
        <item>φ20mm</item>
        <item>φ22mm</item>
        <item>φ25mm</item>
        <item>φ28-32mm</item>
        <item>φ16-25mm</item>
        <item>8mm</item>
        <item>10mm</item>
        <item>12mm</item>
        <item>16-20mm</item>
        <item>40*4</item>
        <item>50*58</item>
        <item>#16</item>
        <item>#12</item>
        <item>#25</item>
        <item>#60*6</item>
        <item>10#</item>
        <item>16#a</item>
        <item>5.5-11.5*1500*C</item>
        <item>2.75mm*1500*C</item>
        <item>1.8mm*1250*C</item>
        <item>8#</item>
        <item>12#</item>
        <item>Φ6.5-10mm</item>
        <item>3.5-11.5mm*1500*C</item>
        <item>4.0-6.0*1500*6000mm</item>
        <item>2.75mm*1250*C</item>
        <item>50*5</item>
        <item>φ5.4-12</item>
        <item>φ9-15.24</item>

        
    </string-array>
    <string-array name="gcChandi">
        <item>产地1</item>
        <item>产地2</item>
        <item>产地3</item>
    </string-array>
    <string-array name="gcShuliang">
        <item>吨</item>
        <item>根</item>
        <item>米</item>
        <item>公斤</item>
    </string-array>
    <string-array name="isGuobiao">
        <item>是</item>
        <item>否</item>
    </string-array>
    <string-array name="jyfs">
        <item>线下交易</item>
        <item>线上交易</item>
    </string-array>
    <string-array name="gccd">
        <item>鞍本钢铁基地</item>
        <item>京津唐钢铁基地</item>
        <item>上海钢铁基地</item>
        <item>武汉钢铁基地</item>
        <item>攀钢基地</item>
        <item>包头钢铁基地</item>
        <item>太原钢铁基地</item>
        <item>马鞍山钢铁基地</item>
        <item>重庆钢铁基地</item>
        <item>台湾中国钢铁公司</item>
    </string-array>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_confirm_login">Confirm Login</string>
    <string name="button_cancel_login">Cancel Login</string>
    <string name="button_confirm_signup">Confirm Sign Up</string>
    <string name="button_cancel_signup">Cancel Sign Up</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading_text_str">加载中，请稍后...</string>
    <string name="scan_title">二维码扫描</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="state">状态</string>
    <string name="app_picker_name">应用</string>
    <string name="app_name">宁光手持式采集系统</string>
    <string name="compay_name">宁夏隆基宁光仪表股份有限公司</string>
    <string name="alarm_management">报警管理</string>
    <string name="content_report">系统设置</string>
    <string name="system_management">系统设置</string>
    <string name="sys_set">系统设置</string>
    <string name="entry">数据查看</string>
    <string name="data_entry">数据录入</string>
    <string name="back_btn">返回</string>
    <string name="scan_btn">扫描</string>
    <string name="upload_btn">全部上传</string>
    <string name="submit_btn">提交</string>
    <string name="ok_btn">确定</string>
    <string name="today">今天</string>
    <string name="cur_week">本周</string>
    <string name="cancel_str">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="day_tian">天</string>
    <string name="latitude_longitude">度</string>
    <string name="label_shidu">％</string>
    <string name="label_wendu">°C</string>
    <string name="mhz">Hz</string>
    <string name="vol">m³</string>
    <string name="click_line_hard">点击连接设备</string>
    <string name="sugar_test_plug">伴随状态</string>
    <string name="input_mark">点击输入备注</string>
    <string name="mark">备注</string>
    <string name="connecting">正在连接设备</string>
    <string name="normal">正常</string>
    <string name="ci_unit">次</string>
    <string name="week">周</string>
    <string name="cache_sycn">缓存同步</string>
    <string name="check_all">全选</string>
    <string name="device_name">设备名称</string>
    <string name="device_addr">设备地址</string>
    <string name="user_self">自定义方案</string>
    <string name="new_str">新</string>
    <string name="add_equip">设备输入</string>
    <string name="input_handle">手工输入</string>
    <string name="test_plan">检测计划</string>
    <string name="test_equip">设备列表</string>
    <string name="bleupload">蓝牙抄表数据上传</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechatpay">微信支付</string>
    <string name="maplocation">地图定位</string>
    <string name="queryinfo">信息查询</string>
    <string name="hisinfo">历史信息查询</string>
    <string name="errorinfo">故障信息查询</string>
    <string name="readingtask">任务查询</string>
    <string name="toast_label">提示</string>
    <string name="toast_time_after">时间还没到呢，生活很美好，咱不急！</string>
    <string name="alarm_def_title">来自隆基宁光的提醒</string>
    <string name="alarm_content">时间到了快干活</string>
    <string name="alarm_default_time">1970-01-01 09:00</string>
    <string name="login">用户登录</string>
    <string name="nameinput_tip">输入用户名</string>
    <string name="pswinput_tip">输入密码</string>
    <string name="metertype_tip">选择表类型</string>
    <string name="forgetpsw">忘记密码？</string>
    <string name="forgetpsw_title">忘记密码</string>
    <string name="findpsw">找回密码</string>
    <string name="check_tip">输入验证码</string>
    <string name="phoneNumber">86+ 请输入手机号</string>
    <string name="truelogin">确认登录</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="bluth_open">正在打开蓝牙设备</string>
    <string name="connect_device">连接设备</string>
    <string name="get_result">读取数据中</string>
    <string name="step6">已获取数据</string>
    <string name="manage_user">用户管理</string>
    <string name="personal_data">个人资料</string>
    <string name="done">完成</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="nick_name">昵称</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="nothing">无</string>
    <string name="unlimited">不限</string>
    <string name="logout">注销登录</string>
    <string name="loging_out">正在注销&#8230;</string>
    <string name="logout_success">注销成功</string>
    <string name="login_success">登录成功</string>
    <string name="exit_login">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检测更新</string>
    <string name="help_us">帮助</string>
    <string name="report_us">意见反馈</string>
    <string name="official_news">公告信息</string>
    <string name="read_cur_water_info">抄读气表当前用气信息</string>
    <string name="read_cur_water_price_info">抄读气表当前价格信息</string>
    <string name="read_real_time_water_status">抄读气表实时状态</string>
    <string name="read_cur_gas_info">抄读气表当前用气信息</string>
    <string name="read_cur_gas_price_info">抄读气表当前价格信息</string>
    <string name="read_real_time_gas_status">抄读气表实时状态</string>
    <string name="read_data_in_concentrator">抄读集中器中数据</string>
    <string name="read_data_in_meter">抄读表中的数据</string>
    <string name="read_data_freezing_data">抄读日冻结数据</string>
    <string name="read_data_freezing_month_data">抄读月冻结数据</string>
    <string name="read_freezing_settlement_data">抄读结算日冻结数据</string>
    <string name="adminster_login_str">管理员登陆</string>
    <string name="new_user_register">新用户注册</string>
</resources>