<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ee_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent" >

        <Button
            android:id="@+id/back_btn"
            style="@style/back_button_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/back_btn" />

        <TextView
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sys_set" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dip" >

            <RelativeLayout
                android:id="@+id/user_info"
                style="@style/user_center_item"
                android:background="@drawable/selector_setting_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dip"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <com.zfg.org.myexample.widget.CircleImageView
                    android:id="@+id/logoTitle"
                    android:layout_width="@dimen/usercenter_photo_width"
                    android:layout_height="@dimen/usercenter_photo_width"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/photo_default" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/logoTitle"
                    android:layout_toLeftOf="@+id/matrix"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/user_name"
                        style="@style/field_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/area"
                        style="@style/field_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dip"/>
                </LinearLayout>

                <ImageView
                    android:id="@id/matrix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dip"
                    android:layout_toLeftOf="@+id/arrow_right_temp"
                    android:src="@mipmap/litle_matrix" />

                <ImageView
                    android:id="@id/arrow_right_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_us"
                style="@style/user_center_item"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/member_height"
                android:layout_marginTop="10dip"
                android:visibility="visible"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/icon_about"
                    android:gravity="center_vertical"
                    android:hint="@string/about_us" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reportus"
                style="@style/user_center_item"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/member_height"
                android:visibility="visible"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/icon_opinion"
                    android:gravity="center_vertical"
                    android:hint="@string/report_us" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/officialnews"
                style="@style/user_center_item"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/page_title_height"
                android:visibility="gone"
                android:background="@drawable/center_item_selector"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/icon_help_set"
                    android:gravity="center_vertical"
                    android:hint="@string/official_news" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/check_update"
                style="@style/user_center_item"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/member_height"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/icon_check_update"
                    android:gravity="center_vertical"
                    android:hint="@string/check_update" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/help"
                style="@style/user_center_item"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/member_height"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@mipmap/icon_help_set"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/help_us" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/blue_arrow_right" />
            </RelativeLayout>

            <Button
                android:id="@+id/exit_user_login"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="36dip"
                android:hint="@string/exit_login"
                android:textColorHint="#fff"
                android:layout_alignParentRight="true"
                android:background="@drawable/target_btn_bg"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_height="45dip"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

