<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/back_btn"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@mipmap/icon_btn_back"
            android:text="退出"
            android:visibility="gone" />

        <TextView
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/main_top_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/login_header_bottom"
            android:id="@+id/view" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="59dp"
            android:background="@mipmap/login_top_logo"
            android:layout_above="@+id/view"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/t_login_layout_editor_bg"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="账   号："
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/login_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#fffbfbfb"
                android:textSize="13dp"
                android:hint="@string/nameinput_tip"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gary" />

        <LinearLayout
            android:id="@+id/ssss"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="密   码："
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/login_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请输入密码"
                android:textSize="13dp"
                android:background="#fffbfbfb"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/login_switchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:button="@drawable/t_login_hide_password_selector"
                android:clickable="true"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login_edit_layout">
        <Spinner
            android:id="@+id/selectUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:entries="@array/user_type" />
    </RelativeLayout>
        <Button
            android:id="@+id/adminster_login"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dip"
            android:background="@drawable/target_btn_bg_login"
            android:text="@string/adminster_login_str"
            android:textColor="@color/common_top_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/user_regist"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dip"
            android:text="@string/new_user_register"
            android:textColor="@color/common_top_color"
            android:textSize="16sp"
            android:visibility="gone"/>

    <!--<Button-->
        <!--android:id="@+id/login_btn"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="42dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:background="@drawable/t_login_layout_btn_bg"-->
        <!--android:text="@string/login"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="150dp"-->
        <!--android:textSize="15sp" />-->


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/selector_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>